--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,20 @@
 [project]
-name = "searxng"
-version = "0.1.0"
-description = "Add your description here"
+name = "searxng-stealth-mcp"
+version = "1.1.0"
+description = "SearXNG Stealth MCP server for AI agents"
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.10"
 dependencies = [
-    "mcp-searxng>=0.1.0",
+    "mcp",
+    "requests"
 ]
+
+[project.scripts]
+searxng-stealth-mcp = "searxng_stealth_mcp.main:main"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/searxng_stealth_mcp"]
