--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "searxng-stealth-mcp"
-version = "1.1.0"
+version = "1.1.2"
 description = "SearXNG Stealth MCP server for AI agents"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -10,11 +10,8 @@ dependencies = [
 ]
 
 [project.scripts]
-searxng-stealth-mcp = "searxng_stealth_mcp.main:main"
+searxng-stealth-mcp = "main:main"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/searxng_stealth_mcp"]
