--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "searxng-stealth-mcp"
-version = "1.1.2"
+version = "1.1.3"
 description = "SearXNG Stealth MCP server for AI agents"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -15,3 +15,6 @@ searxng-stealth-mcp = "main:main"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["main.py"]
